welcome.lessons.welcome.variables.Variables.scala.code
nbpas: Int=0;
for nbpas from 0 to 6 do{
	avance(nbpas);
	prendBiscuit;
	recule(nbpas);
	poseBiscuit();
	nbpas:=nbpas+1;
}